syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ParamList {
	repeated uint32 param_list_ = 1;
}
